# paradedb

./: Cargo.toml
.github/workflows/: test-pg_search-antithesis.yml
docker/: Dockerfile.proptests  Dockerfile.stressgres  README.md
dst/: Cargo.toml
dst/src/: lib.rs
pg_search/: Cargo.toml
pg_search/src/: lib.rs
stressgres/suites/antithesis/: helper_suite_setup.sh
tests/: Cargo.toml
tests/src/fixtures/: db.rs
tests/src/fixtures/querygen/: mod.rs
tests/tests/: qgen.rs
