[package]
name = "tests"
description = "test suite for pg_search"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[features]
# Draw proptest's randomness from the Antithesis SDK (via RngAlgorithm::Antithesis) instead of
# ChaCha, so the platform controls and branches the entropy stream for the qgen property tests,
# and dispatch the per-test correctness assertions through the `dst` crate for real (`dst/enabled`).
# The `antithesis` feature on proptest lives in our fork (antithesishq/proptest); the whole feature
# is enabled only in the Antithesis proptests build (docker/Dockerfile.proptests) and stays off for
# normal `cargo test`, where the `dst` assertion macros compile to nothing.
dst = ["proptest/antithesis", "dst/enabled"]

[dependencies]
approx = "0.5.1"
# Shared Antithesis (DST) hooks: `dst::init()` and the `dst::assert_*!` macros used by the qgen
# oracles. Off by default — the macros expand to type-checked dead code until `dst/enabled` is
# turned on via the `dst` feature above (same crate pg_search/stressgres route through).
dst = { path = "../dst" }
anyhow = "1.0.102"
async-std = { version = "1.13.2", features = ["attributes"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["clock", "alloc"] }
cmd_lib = "1.9.6"
dotenvy = "0.15.7"
futures = "0.3.32"
lockfree-object-pool = "0.1.6"
pgvector = { version = "0.4.1", features = ["sqlx"] }
pretty_assertions = "1.4.1"
rand = "0.9.4"
rstest = "0.25.0"
rustc-hash = "2.1.2"
serde = "1.0.228"
serde_json = "1.0.149"
soa_derive = "0.14.0"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
] }
strum = "0.27.2"
strum_macros = "0.27.2"
tantivy.workspace = true
tempfile = "3.27.0"
time = { version = "0.3.47", features = ["serde"] }
tokenizers = { path = "../tokenizers" }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
uuid = "1.23.1"
num-traits = "0.2.19"
# Fork adds RngAlgorithm::Antithesis behind the `dst` feature (see [features] above).
# Pinned to a rev; the fork's crate version is 1.11.0, matching what paradedb used before.
proptest = { git = "https://github.com/antithesishq/proptest", rev = "6061eb48d67ff76f882e709677308816d5791ce7" }
# proptest-derive stays on crates.io: the fork's derive crate is 0.8.0 (incompatible with our 0.6),
# and the antithesis feature is only on the proptest crate, not the derive macro.
proptest-derive = "0.6.0"
env_logger = "0.11.10"
